--- a/JenkinsFile
+++ b/JenkinsFile
@@ -26,7 +26,7 @@ pipeline
 					}
 					steps
 					{
-						echo $params.stringName
+						echo "$params.stringName"
 						sleep time: 10
 					}
 				}
