adds buildDiscarder option

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -5,6 +5,10 @@ pipeline
 	{
 		githubPush()
 	}
+	options
+	{
+		buildDiscarder(logRotator(numToKeepStr: '3'))
+	}
 	parameters
 	{
 		string(name: "stringName", description: "it is string", defaultValue: "AAAAAA")
